refactor: fix naming of statistics
